<resources>
    <string name="app_name">Oskour</string>
    <string name="app_name_maj">OSKOUR</string>
    <string name="add_app">Nouvelle application</string>
    <string name="exit">Quitter</string>
    <string name="item_default_name">Nom de l\'application</string>
    <string name="icone_image">icone_image</string>
    <string name="modify">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="retour">Retour</string>
    <string name="identifiant">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="creer">Ajouter</string>
    <string name="connection">Connexion</string>
    <string name="fingerprint">fingerprint</string>
    <string name="show">Afficher</string>
    <string name="security_check">Veuillez cliquer sur l\'image pour procéder à l\'identification.</string>
    <string name="biometric_error">Votre appareil de dispose pas d\'un système d\'identification par biométrie.</string>
    <string name="biometric_none">Votre appareil ne dispose d\'aucune empreinte enregistrée.</string>
    <string name="icone_desc">Icone</string>
    <string name="empty">C\'est vide…</string>
</resources>