<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kite"
    tools:context=".AddActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="342dp"
        android:layout_height="80dp"
        android:fontFamily="@font/adelia"
        android:text="@string/app_name_maj"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/addAppName"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:hint="@string/item_default_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/addId"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:hint="@string/identifiant"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAppName"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/addPassword"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addId"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/addApp"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:text="@string/creer"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPassword"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/retour"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:text="@string/retour"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addApp" />


</androidx.constraintlayout.widget.ConstraintLayout>